# information-extraction-demo

./: README.md  pyproject.toml  settings.py
src/: app.py  data_loader.py
